# project2

./: README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: decorators.py  external_api.py  filter.py  generators.py  masks.py  processing.py  reader_csv_excel.py  utils.py  widget.py
tests/: conftest.py  test.txt  test_decorators.py  test_external_api.py  test_filter.py  test_generators.py  test_masks.py  test_processing.py  test_reader_csv_excel.py  test_utils.py  test_widget.py
